--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="fixed top-0 right-0 m-6" *ngIf="tutoDescription">
+<div class="fixed top-0 right-0 m-6 hidden md:block" *ngIf="tutoDescription">
   <div class="border-2 border-orange-400 rounded-md h-40 w-52 flex flex-col items-center overflow-hidden bg-orange-400 ">
     <div class="w-full h-fit bg-white overflow-hidden">
       <img width="100%" height="100%" [src]="assetGif"/>
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div class="flex flex-col items-center justify-start w-screen overflow-y-scroll">
+<div class="flex flex-col items-center justify-start w-screen overflow-y-scroll px-4">
   <div class="max-w-xl h-fit border rounded-md w-full flex flex-col mt-20 overflow-hidden">
     <div class="title flex w-full items-center justify-center py-10">
       <h1 class="text-2xl font-semibold">Mini SEO</h1>
@@ -85,6 +85,9 @@
 
     }"/>
 
+  <div class="flex flex-col grow">
+    <p class="text-gray-400">Made with ♥ from <a href="https://zafranudin.dev/" target="_blank" class="text-orange-400">Zafranudin Zafrin</a></p>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
