feat: Integrate github btn

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,12 +98,11 @@
     <p class="text-gray-300">Made by <a href="https://zafranudin.dev/" target="_blank" class="text-orange-300">Zafranudin
       Zafrin</a></p>
 
-    <div class="flex gap-1">
-      <a class="github-button" href="https://github.com/Xavier-IV/mini-seo" data-icon="octicon-star"
-         data-show-count="true" aria-label="Star Xavier-IV/mini-seo on GitHub">Star</a>
-      <!-- Place this tag where you want the button to render. -->
-      <a class="github-button" href="https://github.com/Xavier-IV" data-show-count="true"
-         aria-label="Follow @Xavier-IV on GitHub">Follow @Xavier-IV</a>
+    <div class="flex items-center gap-1 opacity-30 hover:opacity-60">
+      <iframe src="https://ghbtns.com/github-btn.html?user=Xavier-IV&type=follow&count=true" frameborder="0" scrolling="0" width="170" height="20" title="GitHub"></iframe>
+      <iframe src="https://ghbtns.com/github-btn.html?user=Xavier-IV&repo=mini-seo&type=star&count=true" frameborder="0" scrolling="0" width="85" height="20" title="GitHub"></iframe>
+      <iframe src="https://ghbtns.com/github-btn.html?user=Xavier-IV&repo=mini-seo&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="90" height="20" title="GitHub"></iframe>
+
     </div>
   </div>
 </div>
