--- a/src/app/meta/meta.component.html
+++ b/src/app/meta/meta.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="metas?.title || metas?.description" class="relative border rounded-sm p-4 h-fit mt-10 w-full max-w-4xl select-all mb-20">
-  <button class="border rounded-md p-2 absolute top-0 right-0 m-2 hover:bg-teal-400 hover:border-0 hover:text-white" (click)="copy()">
+  <button class="border rounded-md p-2 absolute top-0 right-0 m-2 bg-white hover:bg-teal-400 hover:border-0 hover:text-white" (click)="copy()">
     Copy
   </button>
   <div #generated *ngIf="metas?.title || metas?.description">
